fix missing background

--- a/public/CSS/member.css
+++ b/public/CSS/member.css
@@ -14,7 +14,7 @@ a :hover {
 }
 
 .options-wrapper {
-    /* background: #555; */
+    background: #555;
     /* background:
     -webkit-repeating-linear-gradient(
     top, #565656, #131313 2px, #565656 1px
